<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.example.cvicenie2.viewmodels.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20sp">
        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8sp"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="8sp"
            android:textAlignment="center"
            android:textSize="40sp"
            android:text="@string/title_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80sp"
            android:text="@string/email"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_title" />
        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:hint="@string/zadajte_email"
            android:text="@={model.email}"
            app:layout_constraintTop_toBottomOf="@+id/label_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <TextView
            android:id="@+id/label_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:textSize="30sp"
            android:text="@string/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_email" />
        <EditText
            android:id="@+id/edit_text_username"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:hint="@string/zadajte_username"
            android:text="@={model.username}"
            app:layout_constraintTop_toBottomOf="@+id/label_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <TextView
            android:id="@+id/label_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heslo"
            android:textSize="30sp"
            android:layout_marginTop="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_username" />
        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:hint="@string/zadajte_heslo"
            android:text="@={model.password}"
            app:layout_constraintTop_toBottomOf="@+id/label_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <TextView
            android:id="@+id/label_password_repeat"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:text="@string/zopakujte_heslo"
            android:layout_marginTop="10sp"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />
        <EditText
            android:id="@+id/edit_text_password_repeat"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:hint="@string/zopakujte_heslo"
            android:text="@={model.repeat_password}"
            app:layout_constraintTop_toBottomOf="@+id/label_password_repeat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="170sp"
            android:onClick="@{()->model.registerUser()}"
            android:text="@string/registruj_sa"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>